# embedded_gd32f30x

./: CMakeLists.txt  README.md  gcc-cortex-m4.cmake  gd32f30x.h  gd32f30x_libopt.h.in  linker_gd32f303cct6.ld  startup_gd32f303cct6.S  system_gd32f30x.c  system_gd32f30x.h
peripheral/src/: gd32f30x_can.c
